--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         </div>
       </div>
       <div class="scroll-down" onclick="location.href='./#about'">
-        <img class="icon" src="./assets/mouse.png" alt="mouse">
+        <img class="icon" src="./assets/mouse.png" alt="mouse" />
         <div class="scroll-text">
           <p>Scroll Down</p>
-          <img class="icon" src="./assets/arrow.png" alt="down-arrow">
+          <img class="icon" src="./assets/arrow.png" alt="down-arrow" />
         </div>
       </div>
     </section>
