--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+
+    <!-- swiper for projects -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   </head>
   <body>
     <!-- DESKTOP NAV -->
@@ -466,9 +469,9 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="skills-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
+      <div class="swiper mySwiper skills-details-container">
+        <div class="swiper-wrapper about-containers">
+          <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/projects-thumbnail/calculator.png"
@@ -492,7 +495,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/projects-thumbnail/shop-app.png"
@@ -517,7 +520,80 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/memehub.png"
+                alt="Project - memehub"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">MemeHub</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/MemeHub'"
+              >
+                GitHub
+              </button>
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/MemeHub/releases'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/calculator.png"
+                alt="Project - calculator"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Calculator</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/CalculatorApp'"
+              >
+                GitHub
+              </button>
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/CalculatorApp/releases'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/shop-app.png"
+                alt="Project - shopapp"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Shop-App</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/Shop-App'"
+              >
+                GitHub
+              </button>
+              <!-- live demo is not mentioned -->
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="location.href='https://github.com/AnikAdhikari7/Shop-App'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/projects-thumbnail/memehub.png"
@@ -542,6 +618,7 @@
             </div>
           </div>
         </div>
+        <div class="swiper-pagination"></div>
       </div>
       <img
         src="./assets/arrow.png"
@@ -644,6 +721,10 @@
       />
     </footer>
 
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    
     <script src="script.js"></script>
+    
   </body>
 </html>
