fixed: projects animation

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="swiper mySwiper skills-details-container">
-        <div class="swiper-wrapper about-containers">
+        <div class="swiper-wrapper project-containers">
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -618,8 +618,8 @@
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
       </div>
+      <div class="swiper-pagination"></div>
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
