--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anik Adhikari</title>
     <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
-
+    
     <!-- swiper for projects -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <!-- DESKTOP NAV -->
@@ -209,7 +211,7 @@
       <h1 class="title">Skills</h1>
       <div class="skills-details-container">
         <div class="about-containers">
-          <!-- LANGUAGES -->
+          <!-- PROGRAMMING LANGUAGES -->
           <div class="details-container">
             <h2 class="skills-sub-title">Programming Languages</h2>
             <div class="article-container">
@@ -219,7 +221,7 @@
                   alt="Skills icon"
                   class="icon"
                 />
-                <div>
+                <div class="skill">
                   <h4>Java</h4>
                   <p>Experienced</p>
                 </div>
@@ -345,7 +347,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Git / GitHub</h4>
+                  <h4>Git/GitHub</h4>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -451,7 +453,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Shop-App</h2>
+            <h2 class="skills-sub-title project-title">ShoeShop</h2>
             <p>Mobile App - Flutter, Dart</p>
             <div class="btn-container">
               <button
@@ -552,7 +554,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Weather-App</h2>
+            <h2 class="skills-sub-title project-title">WeatherApp</h2>
             <p>Mobile App - Flutter, Dart</p>
             <div class="btn-container">
               <button
@@ -594,7 +596,6 @@
               </button>
             </div>
           </div>
-          
         </div>
       </div>
       <div class="swiper-pagination"></div>
