--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- PROFILE -->
     <section id="profile">
       <div id="socials-container">
-        <a href="https://www.linkedin.com/in/anikadhikari">
+        <a target="_blank" href="https://www.linkedin.com/in/anikadhikari">
           <img
             src="./assets/linkedin.png"
             alt="My Linkedin Profile"
@@ -62,11 +62,11 @@
           />
         </a>
 
-        <a href="https://github.com/AnikAdhikari7">
+        <a target="_blank" href="https://github.com/AnikAdhikari7">
           <img src="./assets/github.png" alt="My Github Profile" class="icon" />
         </a>
 
-        <a href="https://twitter.com/MeAnikAdhikari">
+        <a target="_blank" href="https://twitter.com/MeAnikAdhikari">
           <img
             src="./assets/twitter.png"
             alt="My Twitter Profile"
@@ -74,7 +74,7 @@
           />
         </a>
 
-        <a href="https://www.instagram.com/meanikadhikari">
+        <a target="_blank" href="https://www.instagram.com/meanikadhikari">
           <img
             src="./assets/instagram.png"
             alt="My Instagram Profile"
@@ -82,7 +82,7 @@
           />
         </a>
 
-        <a href="https://t.me/AnikAdhikari">
+        <a target="_blank" href="https://t.me/AnikAdhikari">
           <img
             src="./assets/telegram.png"
             alt="My Telegrma Profile"
@@ -110,9 +110,9 @@
           <h1 class="title">Anik Adhikari</h1>
           <p class="section__text__p2">Software Developer</p>
           <div class="btn-container">
-            <button
+            <button target="_blank"
               class="btn btn-color-2"
-              onclick="window.open('./assets/AnikAdhikari-CV.pdf')"
+              onclick="window.open('https://drive.google.com/file/d/1m_dIYhG6Ybu3ACD-oHxxBONBnpCQ10mo/view?usp=sharing', '_blank')"
             >
               Download CV
             </button>
@@ -445,6 +445,35 @@
       <div class="swiper mySwiper skills-details-container">
         <div class="swiper-wrapper project-containers">
           
+          <!-- project -->
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/blog-space.png"
+                alt="Project - blogspace"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">BlogSpace</h2>
+            <p>Web App - React, Appwrite</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/BlogSpace', '_blank')"
+              >
+                GitHub
+              </button>
+              <!-- live demo is not mentioned -->
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="window.open('https://blogspace-blog.vercel.app', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+          <!-- project -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -458,19 +487,21 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/Shop-App'"
+                onclick="window.open('https://github.com/AnikAdhikari7/Shop-App', '_blank')"
               >
                 GitHub
               </button>
               <!-- live demo is not mentioned -->
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/Shop-App'"
+                onclick="window.open('https://github.com/AnikAdhikari7/Shop-App', '_blank')"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
+           <!-- project -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -484,18 +515,48 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/AnikAdhikari'"
+                onclick="window.open('https://github.com/AnikAdhikari7/AnikAdhikari', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://anikadhikari.netlify.app'"
+                onclick="window.open('https://anikadhikari.netlify.app', '_blank')"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
+          <!-- project -->
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/sitestatus-api.png"
+                alt="Project - SiteStatus-API"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">SiteStatus-API</h2>
+            <p>API - JavaScript, NodeJS</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/SiteStatus-API', '_blank')"
+              >
+                GitHub
+              </button>
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/SiteStatus-API', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+
+          <!-- project -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -509,18 +570,48 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/CalculatorApp'"
+                onclick="window.open('https://github.com/AnikAdhikari7/CalculatorApp', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/CalculatorApp/releases'"
+                onclick="window.open('https://github.com/AnikAdhikari7/CalculatorApp/releases', '_blank')"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
+
+          <!-- project -->
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/react.png"
+                alt="Project - react minor projects"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">React Minor Projects</h2>
+            <p>Web Apps - React, JavaScript, TailwindCSS</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/ReactProjects', '_blank')"
+              >
+                GitHub
+              </button>
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/ReactProjects', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+          <!-- project  -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -534,18 +625,20 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/MemeHub'"
+                onclick="window.open('https://github.com/AnikAdhikari7/MemeHub', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/MemeHub/releases'"
+                onclick="window.open('https://github.com/AnikAdhikari7/MemeHub/releases', '_blank')"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
+          <!-- project  -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -559,18 +652,20 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/Weather-App'"
+                onclick="window.open('https://github.com/AnikAdhikari7/Weather-App', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/Weather-App/releases'"
+                onclick="window.open('https://github.com/AnikAdhikari7/Weather-App/releases', '_blank')"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
+          <!-- project  -->
           <div class="swiper-slide details-container color-container">
             <div class="article-container">
               <img
@@ -584,13 +679,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/News'"
+                onclick="window.open('https://github.com/AnikAdhikari7/News', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="location.href='https://github.com/AnikAdhikari7/News/releases'"
+                onclick="window.open('https://github.com/AnikAdhikari7/News/releases', '_blank')"
               >
                 Live Demo
               </button>
@@ -619,7 +714,7 @@
             class="icon contact-icon email-icon"
           />
           <p>
-            <a href="mailto:developwithanik@gmail.com">Email</a>
+            <a target="_blank" href="mailto:developwithanik@gmail.com">Email</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -629,7 +724,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://github.com/AnikAdhikari7">GitHub</a>
+            <a target="_blank" href="https://github.com/AnikAdhikari7">GitHub</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -639,7 +734,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/anikadhikari">LinkedIn</a>
+            <a target="_blank" href="https://www.linkedin.com/in/anikadhikari">LinkedIn</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -649,7 +744,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://twitter.com/MeAnikAdhikari">Twitter</a>
+            <a target="_blank" href="https://twitter.com/MeAnikAdhikari">Twitter</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -659,7 +754,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.instagram.com/meanikadhikari">Instagram</a>
+            <a target="_blank" href="https://www.instagram.com/meanikadhikari">Instagram</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -669,7 +764,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://t.me/AnikAdhikari">Telegram</a>
+            <a target="_blank" href="https://t.me/AnikAdhikari">Telegram</a>
           </p>
         </div>
       </div>
