--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Git/GitHub</h4>
+                  <h4>GitHub</h4>
                   <p>Experienced</p>
                 </div>
               </article>
