update: latest info

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a target="_blank" href="https://t.me/AnikAdhikari">
           <img
             src="./assets/telegram.png"
-            alt="My Telegrma Profile"
+            alt="My Telegram Profile"
             class="icon"
           />
         </a>
@@ -103,7 +103,7 @@
         <div class="section__pic-container">
           <img
             src="./assets/profile-pic.png"
-            alt="Anik Adhkari profile pic"
+            alt="Anik Adhikari profile pic"
             style="border-radius: 50%"
           />
         </div>
@@ -117,7 +117,7 @@
           </p>
           <p class="section__text__p1">Hello, I'm</p>
           <h1 class="title">Anik Adhikari</h1>
-          <p class="section__text__p2">Software Developer</p>
+          <p class="section__text__p2">Software Engineer</p>
           <div class="btn-container">
             <button target="_blank"
               class="btn btn-color-2"
@@ -171,12 +171,15 @@
               <h3>Education</h3>
               <br />
               <p>
-                <span> 2019-21 ⤵ </span>
+                <span>Aug 2021 - Jun 2024 ⤵ </span>
                 <br />
-                &emsp; Higher Secondary - PNBI <br /><br />
-                <span>2021-24 ⤵ </span>
+                Bachelor of Computer Application (BCA) <br/>
+                Netaji Subhash Engineering College | Kolkata, India
+                <br /><br />
+                <span> Jun 2019 - Jun 2021 ⤵ </span>
                 <br />
-                &emsp; BCA - NSEC
+                Higher Secondary Education (10+2) <br/>
+                Purbasthali Nilmani Brahmachari Institution | WB, India
               </p>
             </div>
             <!-- about - experience -->
@@ -189,19 +192,21 @@
               <h3>Experience</h3>
               <br />
               <p>
-                <span>2022-23 ⤵</span>
+                <span>Sep 2024 - Present ⤵</span>
                 <br />
-                &emsp; App Team Member, GDSC-NSEC
+                Graduate Trainee | Full-time <br/>
+                Tata Consultancy Services | Mumbai, India
+                <br /><br />
+                <span>Feb 2024 - Jun 2024 ⤵</span>
+                <br />
+                Backend Developer | Internship <br/>
+                Avinya NeuroTech | Remote
               </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Hi!👋 I'm Anik Adhikari, a student who enjoys learning and working
-              with different types of people. Speaking of myself, I am very
-              enthusiastic about knowing the unknown. I enjoy exploring new
-              technologies and creating solutions that have some positive impact
-              on society and also everyday life!
+              Hi! 👋 I’m Anik Adhikari - a passionate learner and tech enthusiast who thrives on exploring the unknown. I love diving into new technologies and collaborating with diverse individuals to create innovative solutions. My goal is to develop impactful software, tools, and systems that contribute positively to society and enhance everyday life.
             </p>
           </div>
         </div>
@@ -242,7 +247,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Pyhton</h4>
+                  <h4>Python</h4>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -349,7 +354,7 @@
           </div>
           <!-- TOOLS AND PLATFORMS-->
           <div class="details-container">
-            <h2 class="skills-sub-title">Tools & <br/> Platforms</h2>
+            <h2 class="skills-sub-title">Tools & Platforms</h2>
             <div class="article-container">
             
               <article>
@@ -411,7 +416,7 @@
             </div>
             <!-- DATABASES -->
           <div class="details-container">
-            <h2 class="skills-sub-title">Databases & <br/> BaaS Tools</h2>
+            <h2 class="skills-sub-title">Databases & BaaS Tools</h2>
             <div class="article-container">
             
               <article>
@@ -858,7 +863,7 @@
         </div>
       </nav>
       <p>
-        Copyright &#169; 2024 <a href="./#profile">Anik Adhikari</a>. All Rights
+        Copyright &#169; 2025 <a href="./#profile">Anik Adhikari</a>. All Rights
         Reserved
       </p>
       <img
