add flashlight cursor effect

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <br /><br />
                 <span>Feb 2024 - Jun 2024 ⤵</span>
                 <br />
-                Backend Developer | Internship <br/>
+                Backend Developer Intern | Internship <br/>
                 Avinya NeuroTech | Remote
               </p>
             </div>
