--- a/index.html
+++ b/index.html
@@ -495,6 +495,62 @@
       <h1 class="title">Projects</h1>
       <div class="swiper mySwiper skills-details-container">
         <div class="swiper-wrapper project-containers">
+
+          <!-- project -->
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/xpress-init.png"
+                alt="Project - xpress-init"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">xpress-init</h2>
+            <p>NPM Package - CLI tool to set up an Express.js application</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/xpress-init', '_blank')"
+              >
+                GitHub
+              </button>
+              <!-- live demo is not mentioned -->
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="window.open('https://www.npmjs.com/package/xpress-init', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          
+          <!-- project -->
+          <div class="swiper-slide details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/projects-thumbnail/varta.png"
+                alt="Project - varta"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Varta</h2>
+            <p>Web Application (MERN) - "Chat and Converse"</p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/AnikAdhikari7/Varta', '_blank')"
+              >
+                GitHub
+              </button>
+              <!-- live demo is not mentioned -->
+              <button
+                class="btn btn-color-1 project-btn"
+                onclick="window.open('https://varta-jnsl.onrender.com', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
           
           <!-- project -->
           <div class="swiper-slide details-container color-container">
@@ -517,7 +573,7 @@
               <!-- live demo is not mentioned -->
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('http://wetube.ap-south-1.elasticbeanstalk.com/api/v1', '_blank')"
+                onclick="window.open('https://hub.docker.com/r/anikadhikari/wetube', '_blank')"
               >
                 Live Demo
               </button>
