--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
           />
         </a>
 
-        <a target="_blank" href="https://github.com/AnikAdhikari7">
+        <a target="_blank" href="https://github.com/anik-adhikari">
           <img src="./assets/github.png" alt="My Github Profile" class="icon" />
         </a>
 
-        <a target="_blank" href="https://twitter.com/MeAnikAdhikari">
+        <a target="_blank" href="https://twitter.com/imanikadhikari">
           <img
             src="./assets/twitter.png"
             alt="My Twitter Profile"
@@ -83,7 +83,7 @@
           />
         </a>
 
-        <a target="_blank" href="https://www.instagram.com/meanikadhikari">
+        <a target="_blank" href="https://www.instagram.com/imanikadhikari">
           <img
             src="./assets/instagram.png"
             alt="My Instagram Profile"
@@ -121,7 +121,7 @@
           <div class="btn-container">
             <button target="_blank"
               class="btn btn-color-2"
-              onclick="window.open('https://drive.google.com/drive/folders/1cia-G9X81dIjkWLZkbz3amzI_cwRYqFj?usp=sharing', '_blank')"
+              onclick="window.open('https://drive.google.com/drive/folders/156qBSJGXlwfYcQRr1emSJdxtx-EfwkKM?usp=sharing', '_blank')"
             >
               Download CV
             </button>
@@ -171,15 +171,15 @@
               <h3>Education</h3>
               <br />
               <p>
-                <span>Aug 2021 - Jun 2024 ⤵ </span>
+                <span> Aug 2021 - Jun 2024 ⤵ </span>
+                <br />
+                Master of Computer Application (MCA) | Cloud Computing <br/>
+                Chandigarh University | Punjab, India
+                <br /><br />
+                <span> Aug 2021 - Jun 2024 ⤵ </span>
                 <br />
                 Bachelor of Computer Application (BCA) <br/>
                 Netaji Subhash Engineering College | Kolkata, India
-                <br /><br />
-                <span> Jun 2019 - Jun 2021 ⤵ </span>
-                <br />
-                Higher Secondary Education (10+2) <br/>
-                Purbasthali Nilmani Brahmachari Institution | WB, India
               </p>
             </div>
             <!-- about - experience -->
@@ -194,7 +194,7 @@
               <p>
                 <span>Sep 2024 - Present ⤵</span>
                 <br />
-                Graduate Trainee | Full-time <br/>
+                Programmer | Full-time <br/>
                 Tata Consultancy Services | Mumbai, India
                 <br /><br />
                 <span>Feb 2024 - Jun 2024 ⤵</span>
@@ -510,7 +510,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/xpress-init', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/xpress-init', '_blank')"
               >
                 GitHub
               </button>
@@ -538,7 +538,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/Varta', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/Varta', '_blank')"
               >
                 GitHub
               </button>
@@ -566,7 +566,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/WeTube', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/WeTube', '_blank')"
               >
                 GitHub
               </button>
@@ -594,7 +594,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/BlogSpace', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/BlogSpace', '_blank')"
               >
                 GitHub
               </button>
@@ -622,14 +622,14 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/Shop-App', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/Shop-App', '_blank')"
               >
                 GitHub
               </button>
               <!-- live demo is not mentioned -->
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/Shop-App', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/Shop-App', '_blank')"
               >
                 Live Demo
               </button>
@@ -650,7 +650,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/AnikAdhikari', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/AnikAdhikari', '_blank')"
               >
                 GitHub
               </button>
@@ -677,13 +677,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/SiteStatus-API', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/SiteStatus-API', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/SiteStatus-API', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/SiteStatus-API', '_blank')"
               >
                 Live Demo
               </button>
@@ -705,13 +705,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/CalculatorApp', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/CalculatorApp', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/CalculatorApp/releases', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/CalculatorApp/releases', '_blank')"
               >
                 Live Demo
               </button>
@@ -733,13 +733,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/ReactProjects', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/ReactProjects', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/ReactProjects', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/ReactProjects', '_blank')"
               >
                 Live Demo
               </button>
@@ -760,13 +760,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/MemeHub', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/MemeHub', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/MemeHub/releases', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/MemeHub/releases', '_blank')"
               >
                 Live Demo
               </button>
@@ -787,13 +787,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/Weather-App', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/Weather-App', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/Weather-App/releases', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/Weather-App/releases', '_blank')"
               >
                 Live Demo
               </button>
@@ -814,13 +814,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/News', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/News', '_blank')"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-1 project-btn"
-                onclick="window.open('https://github.com/AnikAdhikari7/News/releases', '_blank')"
+                onclick="window.open('https://github.com/anik-adhikari/News/releases', '_blank')"
               >
                 Live Demo
               </button>
@@ -849,7 +849,7 @@
             class="icon contact-icon email-icon"
           />
           <p>
-            <a target="_blank" href="mailto:developwithanik@gmail.com">Email</a>
+            <a target="_blank" href="mailto:anikadhikari.dev@gmail.com">Email</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -859,7 +859,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a target="_blank" href="https://github.com/AnikAdhikari7">GitHub</a>
+            <a target="_blank" href="https://github.com/anik-adhikari">GitHub</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -879,7 +879,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a target="_blank" href="https://twitter.com/MeAnikAdhikari">Twitter</a>
+            <a target="_blank" href="https://twitter.com/imanikadhikari">Twitter</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -889,7 +889,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a target="_blank" href="https://www.instagram.com/meanikadhikari">Instagram</a>
+            <a target="_blank" href="https://www.instagram.com/imanikadhikari">Instagram</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -919,7 +919,7 @@
         </div>
       </nav>
       <p>
-        Copyright &#169; 2025 <a href="./#profile">Anik Adhikari</a>. All Rights
+        Copyright &#169; 2023-Present <a href="./#profile"><b><u>Anik Adhikari</u></b></a> | All Rights
         Reserved
       </p>
       <img
