update about details

--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
               <h3>Education</h3>
               <br />
               <p>
-                <span> Aug 2021 - Jun 2024 ⤵ </span>
+                <span> Jul 2025 - Present ⤵ </span>
                 <br />
                 Master of Computer Application (MCA) | Cloud Computing <br/>
-                Chandigarh University | Punjab, India
+                Chandigarh University | Punjab, India • Distance
                 <br /><br />
                 <span> Aug 2021 - Jun 2024 ⤵ </span>
                 <br />
                 Bachelor of Computer Application (BCA) <br/>
-                Netaji Subhash Engineering College | Kolkata, India
+                Netaji Subhash Engineering College |  Kolkata, India
               </p>
             </div>
             <!-- about - experience -->
@@ -195,12 +195,12 @@
                 <span>Sep 2024 - Present ⤵</span>
                 <br />
                 Programmer | Full-time <br/>
-                Tata Consultancy Services | Mumbai, India
+                Tata Consultancy Services | Mumbai & Chennai, India
                 <br /><br />
                 <span>Feb 2024 - Jun 2024 ⤵</span>
                 <br />
                 Backend Developer Intern | Internship <br/>
-                Avinya NeuroTech | Remote
+                Avinya NeuroTech | Telangana, India • Remote
               </p>
             </div>
           </div>
@@ -208,6 +208,8 @@
             <p>
               Hi! 👋 I’m Anik Adhikari - a passionate learner and tech enthusiast who thrives on exploring the unknown. I love diving into new technologies and collaborating with diverse individuals to create innovative solutions. My goal is to develop impactful software, tools, and systems that contribute positively to society and enhance everyday life.
             </p>
+            <p>
+              Driven by curiosity and a growth mindset, I am constantly seeking opportunities to expand my knowledge and make a meaningful difference in the tech world. Let’s connect and share ideas!</p>
           </div>
         </div>
       </div>
